2001-03-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (mark_transient_subtree):
	fixed core dump

	* libs/ColorUtils.c (GetShadowOrHiliteColor):
	attempt to 'fix' UMR

	* fvwm/colors.c (FreeColors):
	* fvwm/builtins.c (SetDefaultColors):
	* fvwm/module_interface.c (send_list_func):
	* fvwm/events.c (HandleFocusIn):
	* fvwm/cursor.c (CursorStyle):
	* fvwm/menus.c (NewMenuStyle):
	(UpdateMenuStyle):
	* fvwm/fvwm.c (InitVariables):
	(CreateGCs):
	(InitVariables):
	* libs/defaults.h (DEFAULT_BACK_COLOR):
	Define some default colours in defaults.h and use them everywhere.

	* libs/Colorset.c (AllocColorset):
	hardware portability patch; don't assume layout of the colorset_struct
	type

	* libs/envvar.c (getEnv):
	initialise a temporary variable

	* fvwm/builtins.c (add_to_env_list):
	fixed SetEnv memory leak

	* fvwm/session.c (saveQuitSession):
	removed c++ comment

	* libs/envvar.c (strIns):
	commented debug code
	(envDupExpand):
	removed debug code

	* fvwm/add_window.c (free_window_names):
	fixed memory leak

	* libs/Picture.c (LoadPicture):
	fixed core dump with xmb files

	* fvwm/menus.c (MenuInteraction):
	fixed core dump

2001-03-10  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1:
	documented xsm DiscardCommand workaround using $SESSION_MANAGER_NAME

	* fvwm/windowlist.c:
	safety fix, this fixes core dump in WindowList under xsm

2001-03-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (DestroyMenu):
	(copy_menu_root):
	fixed handling of continuation menus with dynamic menu actions

	* fvwm/menus.c (pop_menu_down):
	(DestroyMenu):
	(destroy_menu):
	(merge_continuation_menus):
	* fvwm/windowlist.c (do_windowList):
	fixed deleting menus from dynamic menu actions

	* fvwm/menus.c (DestroyMenu):
	Fixed menu list corruption
	(make_menu):
	do not resize menu if it has other mapped copies
	(update_menu):
	do not update menu style for menus with copies
	(DestroyMenu):
	returns if menu was actually destroyed or not
